--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -150,8 +150,8 @@ Mixins File for Wordpress Theme FAU
     box-shadow: none;
     transition: text-decoration .1s ease;
     padding: 0;
-    text-decoration: underline;
     color: currentcolor;
+    text-decoration-line: underline;
     text-decoration-color: currentcolor;
     text-underline-offset: 0.2rem;
     text-decoration-thickness: 0.1rem;
@@ -159,8 +159,8 @@ Mixins File for Wordpress Theme FAU
     &:hover,
     &:focus {
         box-shadow: none;
-        text-decoration: underline;
-        color: currentcolor;
+	color: currentcolor;
+        text-decoration-line: underline;
         text-decoration-color: currentcolor;
         text-decoration-thickness: 0.3rem;
     }
@@ -178,20 +178,17 @@ Mixins File for Wordpress Theme FAU
     cursor: pointer;
     word-wrap: break-word;
     color: var(--color-content-links);
-    /*box-shadow: inset 0 -0.1rem 0 0 var(--color-primary-ci-hell);*/
     transition: text-decoration .1s ease;
-    text-decoration: underline;
+    text-decoration-line: underline;
     text-decoration-color: var(--color-primary-ci-hell);
-    text-underline-offset: 0.2rem;
     text-decoration-thickness: 0.1rem;
+    text-underline-offset: 0.2rem;
 
     &:active,
     &:focus,
     &:hover {
-        text-decoration: underline;
+        text-decoration-line: underline;
         text-decoration-color: var(--color-primary-ci-hell);
-        /*color: var(--color-primary-ci-hell-kontrast);*/
-        /*box-shadow: inset 0 -1.5rem 0 var(--color-primary-ci-hell);*/
         text-decoration-thickness: 0.3rem;
     }
 }
