--- a/src/sass/editor-style/_editor-style.scss
+++ b/src/sass/editor-style/_editor-style.scss
@@ -4,14 +4,21 @@
 // Sidebar
 @import "editor-sidebar";
 
+// general classes for editor
+@import "gutenberg";
+
 // Paragraph
 @import "core-paragraph";
+
+
 @import "core-blockquote";
 @import "core-list";
 @import "core-table";
 @import "core-verse";
 @import "core-heading";
 @import "core-image";
+
+
 
 // Screenreader Classes
 @import "../../elements/accessibility";
