--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,6 +2,7 @@
 // Konstanten fuer das Design
 //-----------------------------------------------------------------------------------*/
 @use "sass:math";
+@use 'sass:map';
 
 $farbfamilie: 'zuv';
 // med, phil, nat, rw, tf, zuv
@@ -74,79 +75,79 @@ $colormap-primary: $colormap-zentral;
 $colormaps: ("primary": $colormap-primary, "zentral": $colormap-zentral, "phil": $colormap-phil, "med": $colormap-med, "nat": $colormap-nat, "rw": $colormap-rw, "tf": $colormap-tf);
 
 // Branding Color (Color for textlogo)
-$color-branding-primary:    map-get($colormap-primary, "ci-hell");
-$color-branding-primary-kontrast:    map-get($colormap-primary, "ci-hell-kontrast");
-$color-branding-zentral:    map-get($colormap-zentral, "ci-hell");
-$color-branding-phil:	    map-get($colormap-phil, "ci-hell");
-$color-branding-med:	    map-get($colormap-med, "ci-hell");
-$color-branding-tf:	    map-get($colormap-tf, "ci-hell");
-$color-branding-rw:	    map-get($colormap-rw, "ci-hell");
-$color-branding-nat:	    map-get($colormap-nat, "ci-hell");
+$color-branding-primary:    map.get($colormap-primary, "ci-hell");
+$color-branding-primary-kontrast:    map.get($colormap-primary, "ci-hell-kontrast");
+$color-branding-zentral:    map.get($colormap-zentral, "ci-hell");
+$color-branding-phil:	    map.get($colormap-phil, "ci-hell");
+$color-branding-med:	    map.get($colormap-med, "ci-hell");
+$color-branding-tf:	    map.get($colormap-tf, "ci-hell");
+$color-branding-rw:	    map.get($colormap-rw, "ci-hell");
+$color-branding-nat:	    map.get($colormap-nat, "ci-hell");
 
 
 // Content
-$color-content-headlines:   map-get($colormap-misc, "Text");
-$color-links:		    map-get($colormap-misc, "Text");
-$color-content-links:	    map-get($colormap-misc, "Text");
-$color-content-links-underline:	    map-get($colormap-primary, "ci-hell");
-$color-content-links-hover: map-get($colormap-primary, "ci-hell");
+$color-content-headlines:   map.get($colormap-misc, "Text");
+$color-links:		    map.get($colormap-misc, "Text");
+$color-content-links:	    map.get($colormap-misc, "Text");
+$color-content-links-underline:	    map.get($colormap-primary, "ci-hell");
+$color-content-links-hover: map.get($colormap-primary, "ci-hell");
 
 
 // Footer
-$color-footer-bg:	map-get($colormap-primary, "ci-hell");
-$color-footer-text:	map-get($colormap-primary, "ci-hell-kontrast");
+$color-footer-bg:	map.get($colormap-primary, "ci-hell");
+$color-footer-text:	map.get($colormap-primary, "ci-hell-kontrast");
 
 
 // Hero
-$color-hero-bg:		map-get($colormap-primary, "ci-hell");
-$color-hero-text:	map-get($colormap-primary, "ci-hell-kontrast");
+$color-hero-bg:		map.get($colormap-primary, "ci-hell");
+$color-hero-text:	map.get($colormap-primary, "ci-hell-kontrast");
 
 
 
 // Main Menu
-$color-mainmenu-toplevel-bg:		map-get($colormap-misc, "MainBackground");
-$color-mainmenu-toplevel-text:		map-get($colormap-misc, "Text");
-$color-mainmenu-toplevel-hover-text:	map-get($colormap-primary, "ci-hell-kontrast");
-$color-mainmenu-toplevel-hover-bg:	map-get($colormap-primary, "ci-hell");
-$color-mainmenu-sublevel-bg:		map-get($colormap-primary, "ci-hell");
-$color-mainmenu-sublevel-text:		map-get($colormap-primary, "ci-hell-kontrast");
-$color-mainmenu-sublevel-hover-text:	map-get($colormap-primary, "dunkler-kontrast");
-$color-mainmenu-sublevel-hover-bg:	map-get($colormap-primary, "dunkler");
-$color-mainmenu-sublevel-button-text:	map-get($colormap-primary, "ci-hell-kontrast");
-$color-mainmenu-sublevel-button-bg:	map-get($colormap-primary, "ci-hell");
-$color-mainmenu-sublevel-button-hover-text:	map-get($colormap-primary, "dunkelste-kontrast");
-$color-mainmenu-sublevel-button-hover-bg:	map-get($colormap-primary, "dunkelste");
+$color-mainmenu-toplevel-bg:		map.get($colormap-misc, "MainBackground");
+$color-mainmenu-toplevel-text:		map.get($colormap-misc, "Text");
+$color-mainmenu-toplevel-hover-text:	map.get($colormap-primary, "ci-hell-kontrast");
+$color-mainmenu-toplevel-hover-bg:	map.get($colormap-primary, "ci-hell");
+$color-mainmenu-sublevel-bg:		map.get($colormap-primary, "ci-hell");
+$color-mainmenu-sublevel-text:		map.get($colormap-primary, "ci-hell-kontrast");
+$color-mainmenu-sublevel-hover-text:	map.get($colormap-primary, "dunkler-kontrast");
+$color-mainmenu-sublevel-hover-bg:	map.get($colormap-primary, "dunkler");
+$color-mainmenu-sublevel-button-text:	map.get($colormap-primary, "ci-hell-kontrast");
+$color-mainmenu-sublevel-button-bg:	map.get($colormap-primary, "ci-hell");
+$color-mainmenu-sublevel-button-hover-text:	map.get($colormap-primary, "dunkelste-kontrast");
+$color-mainmenu-sublevel-button-hover-bg:	map.get($colormap-primary, "dunkelste");
 
 // Submenu (= Subnav links)
-$color-submenu-toplevel-bg:		map-get($colormap-misc, "MainBackground");
-$color-submenu-toplevel-text:		map-get($colormap-misc, "Text");
-$color-submenu-toplevel-hover-text:	map-get($colormap-primary, "ci-hell-kontrast");
-$color-submenu-toplevel-hover-bg:	map-get($colormap-primary, "ci-hell");
-$color-submenu-active-bg:		map-get($colormap-primary, "ci-hell");
-$color-submenu-active-text:		map-get($colormap-primary, "ci-hell-kontrast");
-$color-submenu-hover-text:		map-get($colormap-primary, "dunkler-kontrast");
-$color-submenu-hover-bg:		map-get($colormap-primary, "dunkler");
-$color-submenu-currentlevel-text:	map-get($colormap-primary, "ci-hell2-kontrast");
-$color-submenu-currentlevel-bg:		map-get($colormap-primary, "ci-hell2");
-$color-submenu-currentpage-text-hover:	map-get($colormap-misc, "StandardHellgrau-Hover");
-$color-submenu-sublevel-text:		map-get($colormap-primary, "ci-hell-kontrast");
-$color-submenu-sublevel-bg:		map-get($colormap-primary, "ci-hell");
+$color-submenu-toplevel-bg:		map.get($colormap-misc, "MainBackground");
+$color-submenu-toplevel-text:		map.get($colormap-misc, "Text");
+$color-submenu-toplevel-hover-text:	map.get($colormap-primary, "ci-hell-kontrast");
+$color-submenu-toplevel-hover-bg:	map.get($colormap-primary, "ci-hell");
+$color-submenu-active-bg:		map.get($colormap-primary, "ci-hell");
+$color-submenu-active-text:		map.get($colormap-primary, "ci-hell-kontrast");
+$color-submenu-hover-text:		map.get($colormap-primary, "dunkler-kontrast");
+$color-submenu-hover-bg:		map.get($colormap-primary, "dunkler");
+$color-submenu-currentlevel-text:	map.get($colormap-primary, "ci-hell2-kontrast");
+$color-submenu-currentlevel-bg:		map.get($colormap-primary, "ci-hell2");
+$color-submenu-currentpage-text-hover:	map.get($colormap-misc, "StandardHellgrau-Hover");
+$color-submenu-sublevel-text:		map.get($colormap-primary, "ci-hell-kontrast");
+$color-submenu-sublevel-bg:		map.get($colormap-primary, "ci-hell");
 
-$color-submenu-currentpage-bg:		map-get($colormap-primary, "dunkelste");
-$color-submenu-currentpage-text:	map-get($colormap-primary, "dunkelste-kontrast");
+$color-submenu-currentpage-bg:		map.get($colormap-primary, "dunkelste");
+$color-submenu-currentpage-text:	map.get($colormap-primary, "dunkelste-kontrast");
 
-$color-menulink-hover-text:		map-get($colormap-primary, "dunkler-kontrast");
-$color-menulink-hover-bg:		map-get($colormap-primary, "dunkler");
-
-
+$color-menulink-hover-text:		map.get($colormap-primary, "dunkler-kontrast");
+$color-menulink-hover-bg:		map.get($colormap-primary, "dunkler");
 
 
-$colorNotice:		map-get($colormap-misc, "Notice"); 	
-$colorZUV:		map-get($colormap-misc, "ZUV"); 
-$colorDefault:		map-get($colormap-misc, "Default"); 
-$colorStandardHellgrau: map-get($colormap-misc, "StandardHellgrau"); 
-$colorContentRegions:	map-get($colormap-misc, "ContentRegions"); 
-$colorMainBackground:	map-get($colormap-misc, "MainBackground"); 
+
+
+$colorNotice:		map.get($colormap-misc, "Notice"); 	
+$colorZUV:		map.get($colormap-misc, "ZUV"); 
+$colorDefault:		map.get($colormap-misc, "Default"); 
+$colorStandardHellgrau: map.get($colormap-misc, "StandardHellgrau"); 
+$colorContentRegions:	map.get($colormap-misc, "ContentRegions"); 
+$colorMainBackground:	map.get($colormap-misc, "MainBackground"); 
 
 $colorShadows:	rgba(135,132,135,1);
 // Color for shadows
@@ -158,9 +159,9 @@ $colorOverlayDark: rgba(0, 0, 0, 0.15);
 
 // Meta Menu
 // Define Background-Color for Meta Menu at top
-$colorMetaFAUHomeBackground:	map-get($colormap-misc, "MetaBackground"); 
-$colorMetaHover:		map-get($colormap-misc, "MetaHover"); 
-$colorMetaLightest:		map-get($colormap-misc, "MetaBackgroundLight"); 
+$colorMetaFAUHomeBackground:	map.get($colormap-misc, "MetaBackground"); 
+$colorMetaHover:		map.get($colormap-misc, "MetaHover"); 
+$colorMetaLightest:		map.get($colormap-misc, "MetaBackgroundLight"); 
 
 
 		 
@@ -169,14 +170,14 @@ $colorCopyright: #fff;
 $colorCopyrightBackground: rgba(0, 0, 0, 0.6);
 
 // Buttons
-$color_button_text:		map-get($colormap-primary, "ci-hell-kontrast");
-$color_button_bg:		map-get($colormap-primary, "ci-hell");
-$color-button-hover-text:	map-get($colormap-primary, "dunkelste-kontrast");
-$color-button-hover-bg:		map-get($colormap-primary, "dunkelste");
+$color_button_text:		map.get($colormap-primary, "ci-hell-kontrast");
+$color_button_bg:		map.get($colormap-primary, "ci-hell");
+$color-button-hover-text:	map.get($colormap-primary, "dunkelste-kontrast");
+$color-button-hover-bg:		map.get($colormap-primary, "dunkelste");
 
 // Ghost-Button
-$color-ghostbutton-hover-text:	map-get($colormap-primary, "ci-hell-kontrast");
-$color-ghostbutton-hover-bg:	map-get($colormap-primary, "ci-hell");
+$color-ghostbutton-hover-text:	map.get($colormap-primary, "ci-hell-kontrast");
+$color-ghostbutton-hover-bg:	map.get($colormap-primary, "ci-hell");
 
 
 // Default Border Radius
@@ -188,9 +189,9 @@ $border-radius-buttons:	 0px;
 $default-devider-height: 4px;
 
 // Hinweis: Für SVG-Grafiken brauchen wir den HEX-Code direkt und können nicht Custom Properies nutzen!
-$socialmedia_icon_bgcolor_hover: map-get($colormap-primary, "ci-hell-kontrast");
-$socialmedia_icon_color:	map-get($colormap-primary, "ci-hell-kontrast");
-$socialmedia_icon_color_hover:	map-get($colormap-primary, "ci-hell");
+$socialmedia_icon_bgcolor_hover: map.get($colormap-primary, "ci-hell-kontrast");
+$socialmedia_icon_color:	map.get($colormap-primary, "ci-hell-kontrast");
+$socialmedia_icon_color_hover:	map.get($colormap-primary, "ci-hell");
 
 $svg-icon-size: 1.4rem;
 $svg-icon-color: $color_button_text;
@@ -202,7 +203,7 @@ $socialmedia_icon_size: 1.8rem;
 
 
 $fontStack: 'Roboto','FAU Chimera', sans-serif;
-$fontStackSerifs: Georgia, serif;
+$fontStackSerifs: Georgia, "Times New Roman", Times, serif;
 $fontStackFAU: 'FAU Chimera', sans-serif;
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 
@@ -331,15 +332,15 @@ $font-size-contentmenu-title: ($font-size-base + 2);
 $font-size-contentmenu-link: $font-size-base;
 $font-size-contentmenu-listview: ($font-size-base - 1);
 
-$contentmenu-xxs-width: 182px;
-$contentmenu-default-width: 302px;
-$contentmenu-default-height: floor(math.div(300px, 3) * 2);
-$contentmenu-xxs-maxheight: floor(math.div(180px, 3) * 2);
+$contentmenu-xxs-width:		182px;
+$contentmenu-default-width:	302px;
+$contentmenu-default-height:	200px;
+$contentmenu-xxs-maxheight:	120px;
 
-$contentmenu-typ2-width: 300px;
-$contentmenu-typ2-height: auto;
-$contentmenu-typ3-width: 480px;
-$contentmenu-typ3-height: auto;
+$contentmenu-typ2-width:	300px;
+$contentmenu-typ2-height:	auto;
+$contentmenu-typ3-width:	480px;
+$contentmenu-typ3-height:	auto;
 
 // Slider
 $slick-arrow-color: white !default;
@@ -407,9 +408,9 @@ $container-xl: 1400px;
 $container-xxl: 1760px;
 
 // Bootstrap Adjustments
-$fau-gutter-width: 30px;
-$fau-gutter-halfwidth: ceil(math.div($fau-gutter-width, 2));
-$fau-gutter-thirdwidth: ceil(math.div($fau-gutter-width, 3));
+$fau-gutter-width:	30px;
+$fau-gutter-halfwidth:	15px;
+$fau-gutter-thirdwidth: 10px;
 
 $grid-gutter-width: $fau-gutter-width;
 
