--- a/src/sass/editor-style/_core-blockquote.scss
+++ b/src/sass/editor-style/_core-blockquote.scss
@@ -1,8 +1,7 @@
 /*----------------------------------------------------------------------------*/
-/* _wp-block-blockquote 
-/* Created on : 03.05.2024, 15:12:21
+/* _core-blockquote.scss
+/* Created on : 6.11.2024, 10:00
 /*----------------------------------------------------------------------------*/
-@import "../../mixins/mixin-blockquotes";
 
 blockquote.wp-block-quote,
 figure.wp-block-pullquote blockquote {
