--- a/src/sass/editor-style/_core-list.scss
+++ b/src/sass/editor-style/_core-list.scss
@@ -1,8 +1,7 @@
 /*----------------------------------------------------------------------------*/
-/* _wp-block-list-item 
+/* _core-lists-scss
 /* Created on : 24.09.2024, 08:10:21
 /*----------------------------------------------------------------------------*/
-
 .wp-block-list-item {
     // imported from _paragraphs.scss
     @include paragraphs;
