--- a/src/sass/editor-style/_core-table.scss
+++ b/src/sass/editor-style/_core-table.scss
@@ -1,4 +1,7 @@
-@import "../../mixins/mixin-tables";
+/*----------------------------------------------------------------------------*/
+/* _core_table.scss
+/* Created on : 6.11.2024, 10:00
+/*----------------------------------------------------------------------------*/
 
 figure {
     // currently from mixins/mixins
