--- a/src/sass/editor-style/_editor-sidebar.scss
+++ b/src/sass/editor-style/_editor-sidebar.scss
@@ -1,4 +1,9 @@
-// CSS belong Editor: Sidebar and tools
+/*----------------------------------------------------------------------------*/
+/* _editor-sidebar.scss
+/*  CSS belong Editor: Sidebar and tools
+/* Created on : 6.11.2024, 10:00
+/*----------------------------------------------------------------------------*/
+
 
 .edit-post-sidebar {
 	h3 {
