--- a/src/sass/editor-style/_gutenberg.scss
+++ b/src/sass/editor-style/_gutenberg.scss
@@ -1,6 +1,9 @@
-/*
-Backend CSS Settings for Block Editor (Gutenberg)
-*/
+
+/*----------------------------------------------------------------------------*/
+/* _gutenberg.scss
+/* Backend CSS Settings for Block Editor (Gutenberg)
+/* Created on : 6.11.2024, 10:00
+/*----------------------------------------------------------------------------*/
 
 
 .block-editor {
