--- a/src/sass/fau-theme-admin.scss
+++ b/src/sass/fau-theme-admin.scss
@@ -29,7 +29,7 @@ $font-path-roboto:	'../fonts/roboto/';
 @import "icons/icons";
 
 // Mixins
-@import "mixins/mixins";
+// @import "mixins/mixins";
 
 // Fonts
 // @import "fonts/fonts";
