Anpassungen für die Nutzung des Editors. Classic Editor Style hinterlegt, der beim Classic Editor geladen wird.

--- a/src/sass/fau-theme-classiceditor.scss
+++ b/src/sass/fau-theme-classiceditor.scss
@@ -9,6 +9,7 @@ $font-path-fau-chimera: '../fonts/fau-chimera/';
 $font-path-awesome:	'../fonts/fontawesome';
 $font-path-roboto:	'../fonts/roboto';
 
+
 // SVG Icons and CI elements
 @import "icons/icons";
 
@@ -18,12 +19,8 @@ $font-path-roboto:	'../fonts/roboto';
 // Fonts
 @import "fonts/fonts";
 
-// Block Library Overwrites
-@import "block-library/block-library";
 
-// Styles im Editor  
-@import "editor-style/editor-style";
-
-.editor-styles-wrapper{
+.wp-editor {
     font-family: var(--font-family-default);
+    @import "elements/elements";
 }
