--- a/print.css
+++ b/print.css
@@ -1,6 +1,6 @@
 ﻿/*!
 Theme Name: FAU-Einrichtungen
-Version: 2.5.21-4
+Version: 2.5.21
 Requires at least: 6.4
 Tested up to: 6.6
 Requires PHP: 8.2
