--- a/css/fau-theme-classiceditor.css
+++ b/css/fau-theme-classiceditor.css
@@ -2,7 +2,7 @@
 /*!
 * Editor CSS for Theme:
 * Theme Name: FAU-Einrichtungen
-* Version: 2.6.2
+* Version: 2.6.3-0
 * GitHub Issue URL: https://github.com/RRZE-Webteam/FAU-Einrichtungen/issues
 */
 /*-----------------------------------------------------------------------------------*/
